tests/snapshots/compiler_error_fixtures/duplicate_instance.snap
---
source: tests/compiler_error_fixtures_snapshots.rs
assertion_line: 141
---
Fixture: examples/compiler_errors/duplicate_instance.flx
== compile ==
failed (compile)
== diagnostics ==
error[E443]: Duplicate Instance

Duplicate instance for `Sizeable<Int>`.

  examples/compiler_errors/duplicate_instance.flx:15:1
   |
15 | instance Sizeable<Int> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^
16 |     fn size(x) { x + 1 }
   | ^^^^^^^^^^^^^^^^^^^^^^^^
17 | }
   | ^
== stdout ==
<not executed>
